getting-started-with-istio-service-mesh/ch06/configs/webapp-deployment-v7.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-7
  labels:
    app: webapp
    version: v7.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        version: v7.1
    spec:
      containers:
        - name: webapp
          image: web-app:7.1
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
