getting-started-with-istio-service-mesh/ch06/configs/dr-circuitbreaker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: webservice-circuitbreaker
spec:
  host: webservice
  subsets:
    - name: v0
      labels:
        version: v7.0
    - name: v1
      labels:
        version: v7.1
      trafficPolicy:
        connectionPool:
          tcp:
            maxConnections: 1
          http:
            http1MaxPendingRequests: 1
            maxRequestsPerConnection: 1
